--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,10 @@
     "docx": "^9.5.1",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-github2": "^0.1.12",
+    "express-session": "^1.18.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "sharp": "^0.34.5"
